--- a/Index.html
+++ b/Index.html
@@ -28,12 +28,12 @@
             <nav class="nav">
                 <a href="About_Us.html">About Us</a>
                 <a href="Products.html">Products</a>
-                <a href="Services.html">Services</a>
+                <a href="Services.html" class="current">Services</a>
                 <div class="Icons">
-                    <a href="Wishlist.html" alt="wishlist"><i class="fa-solid fa-heart"></i></a>
-                    <a href="Login.html" alt="Login"> <i class="fa-solid fa-circle-user"></i></a>
-                    <a href="Contact_Us.html" alt="Contact Us"><i class="fa-solid fa-envelope"></i></a>
-                    <a href="Feedback" alt="Feedback"><i class="fa-solid fa-comment-dots"></i></a>
+                    <a href="Wishlist.html"><i class="fa-solid fa-heart"></i></a>
+                    <a href="Login.html"> <i class="fa-solid fa-circle-user"></i></a>
+                    <a href="Contact_Us.html"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="Feedback"><i class="fa-solid fa-comment-dots"></i></a>
                 </div>
                 <form class="query">
                     <input type="text" placeholder="Search.." name="search">
