--- a/Products.html
+++ b/Products.html
@@ -27,13 +27,13 @@
         <header class="header">
             <nav class="nav">
                 <a href="About_Us.html">About Us</a>
-                <a href="Products.html" class="current">Products</a>
-                <a href="Services.html">Services</a>
+                <a href="Products.html">Products</a>
+                <a href="Services.html" class="current">Services</a>
                 <div class="Icons">
-                    <a href="Wishlist.html" alt="wishlist"><i class="fa-solid fa-heart"></i></a>
-                    <a href="Login.html" alt="Login"> <i class="fa-solid fa-circle-user"></i></a>
-                    <a href="Contact_Us.html" alt="Contact Us"><i class="fa-solid fa-envelope"></i></a>
-                    <a href="Feedback" alt="Feedback"><i class="fa-solid fa-comment-dots"></i></a>
+                    <a href="Wishlist.html"><i class="fa-solid fa-heart"></i></a>
+                    <a href="Login.html"> <i class="fa-solid fa-circle-user"></i></a>
+                    <a href="Contact_Us.html"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="Feedback"><i class="fa-solid fa-comment-dots"></i></a>
                 </div>
                 <form class="query">
                     <input type="text" placeholder="Search.." name="search">
@@ -96,131 +96,131 @@
                             <li>Lining Material: Unlined</li>
                             <li>Upper Material: Leather</li>
                         </ul>
+                    </div>
+                </div>
+                <div><img src="Assets/Sally Black.jpg" alt="Sally Black">
+                    <div class="info">
+                        <h4>Sally Black</h4>
+                        <b>Colour:</b> Black<br>
+                        <b>Sizes:</b> US 6,7 8, 9, 10,11<br>
+                        <b>Price:</b> $90.00<br>
+
+                        Perfect for those on their feet all day who require leather uppers for easy cleaning.<br>
+                        Featuring a super flexible and grippy outsole for durability and a soft padded footbed for
+                        extra
+                        comfort.<br>
+                        <ul>
+                            <li>Soft leather uppers and lightly padded collar</li>
+                            <li>Plush footbed for added comfort</li>
+                            <li> heel grip</li>
+                            <li>Flexible and grippy outsole with 10% recycled material</li>
+                        </ul>
+                        <b>Materials & Details</b>
+                        <ul>
+                            <li>Product Code: 21960</li>
+                            <li>Sole Material: Rubber</li>
+                            <li>Sock Material: Pigskin</li>
+                            <li>Lining Material: Unlined</li>
+                            <li>Upper Material: Leather</li>
+                        </ul>
 
                     </div>
-                    <div><img src="Assets/Sally Black.jpg" alt="Sally Black">
-                        <div class="info">
-                            <h4>Sally Black</h4>
-                            <b>Colour:</b> Black<br>
-                            <b>Sizes:</b> US 6,7 8, 9, 10,11<br>
-                            <b>Price:</b> $90.00<br>
+                </div>
+                <div><img src="Assets/Gary Tan.jpg" alt="Gary Tan">
+                    <div class="info">
+                        <h4>Gary Tan</h4>
+                        <b>Colour:</b> Black<br>
+                        <b>Sizes:</b> US 6,7 8, 9, 10,11<br>
+                        <b>Price:</b> $90.00<br>
 
-                            Perfect for those on their feet all day who require leather uppers for easy cleaning.<br>
-                            Featuring a super flexible and grippy outsole for durability and a soft padded footbed for
-                            extra
-                            comfort.<br>
-                            <ul>
-                                <li>Soft leather uppers and lightly padded collar</li>
-                                <li>Plush footbed for added comfort</li>
-                                <li> heel grip</li>
-                                <li>Flexible and grippy outsole with 10% recycled material</li>
-                            </ul>
-                            <b>Materials & Details</b>
-                            <ul>
-                                <li>Product Code: 21960</li>
-                                <li>Sole Material: Rubber</li>
-                                <li>Sock Material: Pigskin</li>
-                                <li>Lining Material: Unlined</li>
-                                <li>Upper Material: Leather</li>
-                            </ul>
+                        Perfect for those on their feet all day who require leather uppers for easy cleaning.<br>
+                        Featuring a super flexible and grippy outsole for durability and a soft padded footbed for
+                        extra
+                        comfort.<br>
+                        <ul>
+                            <li>Soft leather uppers and lightly padded collar</li>
+                            <li>Plush footbed for added comfort</li>
+                            <li> heel grip</li>
+                            <li>Flexible and grippy outsole with 10% recycled material</li>
+                        </ul>
+                        <b>Materials & Details</b>
+                        <ul>
+                            <li>Product Code: 21960</li>
+                            <li>Sole Material: Rubber</li>
+                            <li>Sock Material: Pigskin</li>
+                            <li>Lining Material: Unlined</li>
+                            <li>Upper Material: Leather</li>
+                        </ul>
 
-                        </div>
                     </div>
-                    <div><img src="Assets/Gary Tan.jpg" alt="Gary Tan">
-                        <div class="info">
-                            <h4>Gary Tan</h4>
-                            <b>Colour:</b> Black<br>
-                            <b>Sizes:</b> US 6,7 8, 9, 10,11<br>
-                            <b>Price:</b> $90.00<br>
+                </div>
+                <div><img src="Assets/Sally Tan.jpg" alt="Sally Tan">
+                    <div class="info">
+                        <h4>Sally Tan</h4>
+                        <b>Colour:</b> Black<br>
+                        <b>Sizes:</b> US 6,7 8, 9, 10,11<br>
+                        <b>Price:</b> $90.00<br>
 
-                            Perfect for those on their feet all day who require leather uppers for easy cleaning.<br>
-                            Featuring a super flexible and grippy outsole for durability and a soft padded footbed for
-                            extra
-                            comfort.<br>
-                            <ul>
-                                <li>Soft leather uppers and lightly padded collar</li>
-                                <li>Plush footbed for added comfort</li>
-                                <li> heel grip</li>
-                                <li>Flexible and grippy outsole with 10% recycled material</li>
-                            </ul>
-                            <b>Materials & Details</b>
-                            <ul>
-                                <li>Product Code: 21960</li>
-                                <li>Sole Material: Rubber</li>
-                                <li>Sock Material: Pigskin</li>
-                                <li>Lining Material: Unlined</li>
-                                <li>Upper Material: Leather</li>
-                            </ul>
+                        Perfect for those on their feet all day who require leather uppers for easy cleaning.<br>
+                        Featuring a super flexible and grippy outsole for durability and a soft padded footbed for
+                        extra
+                        comfort.<br>
+                        <ul>
+                            <li>Soft leather uppers and lightly padded collar</li>
+                            <li>Plush footbed for added comfort</li>
+                            <li> heel grip</li>
+                            <li>Flexible and grippy outsole with 10% recycled material</li>
+                        </ul>
+                        <b>Materials & Details</b>
+                        <ul>
+                            <li>Product Code: 21960</li>
+                            <li>Sole Material: Rubber</li>
+                            <li>Sock Material: Pigskin</li>
+                            <li>Lining Material: Unlined</li>
+                            <li>Upper Material: Leather</li>
+                        </ul>
 
-                        </div>
                     </div>
-                    <div><img src="Assets/Sally Tan.jpg" alt="Sally Tan">
-                        <div class="info">
-                            <h4>Sally Tan</h4>
-                            <b>Colour:</b> Black<br>
-                            <b>Sizes:</b> US 6,7 8, 9, 10,11<br>
-                            <b>Price:</b> $90.00<br>
+                </div>
+                <div><img src="Assets/Clancy Blue.jpg" alt="Clancy Blue">
+                    <div class="info">
+                        <h4>Clancy Blue</h4>
+                        <b>Colour:</b> Black<br>
+                        <b>Sizes:</b> US 6,7 8, 9, 10,11<br>
+                        <b>Price:</b> $90.00<br>
 
-                            Perfect for those on their feet all day who require leather uppers for easy cleaning.<br>
-                            Featuring a super flexible and grippy outsole for durability and a soft padded footbed for
-                            extra
-                            comfort.<br>
-                            <ul>
-                                <li>Soft leather uppers and lightly padded collar</li>
-                                <li>Plush footbed for added comfort</li>
-                                <li> heel grip</li>
-                                <li>Flexible and grippy outsole with 10% recycled material</li>
-                            </ul>
-                            <b>Materials & Details</b>
-                            <ul>
-                                <li>Product Code: 21960</li>
-                                <li>Sole Material: Rubber</li>
-                                <li>Sock Material: Pigskin</li>
-                                <li>Lining Material: Unlined</li>
-                                <li>Upper Material: Leather</li>
-                            </ul>
+                        Perfect for those on their feet all day who require leather uppers for easy cleaning.<br>
+                        Featuring a super flexible and grippy outsole for durability and a soft padded footbed for
+                        extra
+                        comfort.<br>
+                        <ul>
+                            <li>Soft leather uppers and lightly padded collar</li>
+                            <li>Plush footbed for added comfort</li>
+                            <li> heel grip</li>
+                            <li>Flexible and grippy outsole with 10% recycled material</li>
+                        </ul>
+                        <b>Materials & Details</b>
+                        <ul>
+                            <li>Product Code: 21960</li>
+                            <li>Sole Material: Rubber</li>
+                            <li>Sock Material: Pigskin</li>
+                            <li>Lining Material: Unlined</li>
+                            <li>Upper Material: Leather</li>
+                        </ul>
 
-                        </div>
                     </div>
-                    <div><img src="Assets/Clancy Blue.jpg" alt="Clancy Blue">
-                        <div class="info">
-                            <h4>Clancy Blue</h4>
-                            <b>Colour:</b> Black<br>
-                            <b>Sizes:</b> US 6,7 8, 9, 10,11<br>
-                            <b>Price:</b> $90.00<br>
-
-                            Perfect for those on their feet all day who require leather uppers for easy cleaning.<br>
-                            Featuring a super flexible and grippy outsole for durability and a soft padded footbed for
-                            extra
-                            comfort.<br>
-                            <ul>
-                                <li>Soft leather uppers and lightly padded collar</li>
-                                <li>Plush footbed for added comfort</li>
-                                <li> heel grip</li>
-                                <li>Flexible and grippy outsole with 10% recycled material</li>
-                            </ul>
-                            <b>Materials & Details</b>
-                            <ul>
-                                <li>Product Code: 21960</li>
-                                <li>Sole Material: Rubber</li>
-                                <li>Sock Material: Pigskin</li>
-                                <li>Lining Material: Unlined</li>
-                                <li>Upper Material: Leather</li>
-                            </ul>
-
-                        </div>
-                    </div>
+                </div>
             </section>
         </main>
     </div>
-        <footer class="footer">
-            <section class="contact">
-                <h2>Contact Us</h2>
-                <a href="tel:(02)00000000">Phone: (02) 0000 0000</a>
-                <a href="mailto:Hello@tiptopshoes.com">Email: Hello@TipTopShoes.com</a>
-            </section>
-            <p class="copyright">&copy; Lauren Howell
-        </footer>
+    <footer class="footer">
+        <section class="contact">
+            <h2>Contact Us</h2>
+            <a href="tel:(02)00000000">Phone: (02) 0000 0000</a>
+            <a href="mailto:Hello@tiptopshoes.com">Email: Hello@TipTopShoes.com</a>
+        </section>
+        <p class="copyright">&copy; Lauren Howell
+    </footer>
 </body>
 
 </html>
